syntax = "proto3";

option csharp_namespace = "Discount.Api.Protos";

package Discount;


service DiscountServicegRPC {
   rpc GetCoupon(GetCouponRequest) returns (CouponModel);
    rpc CreateCoupon(CouponModel) returns (CouponModel);
    rpc UpdateCoupon(CouponModel) returns (UpdateCouponResponse);
    rpc DeleteCoupon(DeleteCouponRequest) returns (EmptyResponse);
    rpc ApplyCouponVoucher(ApplyCouponVoucherRequest) returns (ApplyCouponVoucherResponse);
    rpc GetCoupons(EmptyRequest) returns (GetCouponResponse) ;
    rpc ReturnCoupon(ReturnCouponRequest) returns (ReturnCouponResponse);

}

message CouponModel {
    string id = 1;
    string couponName = 2;
    string code = 3;
    double value = 4;
    string startDate = 5;
    string endDate = 6;
    string description = 7;
    int32 quantity = 8;
    int32 usedCount = 9;
    double minimumAmount = 10; 
}

message GetCouponRequest {
    string couponName = 1;
}

message UpdateCouponResponse {
    bool success = 1;
}

message DeleteCouponRequest {
    string couponName = 1;
}

message EmptyResponse {
}

message ApplyCouponVoucherRequest {
    string couponCode = 1; // mã code
    double amount = 2; // tổng đơn hàng 
}

message ApplyCouponVoucherResponse {
   string id = 1;
   double valueDiscount = 2; // kết quả được giảm
   bool isSuccess = 3;
   string message = 4;
}

message GetCouponResponse {
    repeated CouponModel coupons = 1;
}
message EmptyRequest {
}

message ReturnCouponRequest {
   string id = 1;
}

message ReturnCouponResponse {
   bool success = 1;
}
